Project

General

Profile

Actions

Bug #20850

closed

osd: luminous osd crashes when older monitor doesn't support set-device-class

Added by Josh Durgin over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
-
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

See e.g.:

http://pulpito.ceph.com/joshd-2017-07-28_23:13:34-upgrade:jewel-x-master-distro-basic-smithi/1456505/

If we get anything other than EPERM, the osd crashes. Perhaps this should be gated on the require_luminous_osds flag.

Actions #1

Updated by Sage Weil over 6 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF