osd: do not try to set device class before luminous

This avoids crashing when older monitors do not support it.

Fixes: http://tracker.ceph.com/issues/20850
Signed-off-by: Josh Durgin <jdurgin@redhat.com>